2012-10-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r132149.
        http://trac.webkit.org/changeset/132149
        https://bugs.webkit.org/show_bug.cgi?id=100098

        Breaks inspector profiler tests in debug mode. (Requested by
        pfeldman1 on #webkit).

        * fast/table/col-span-change-relayout-expected.txt: Removed.
        * fast/table/col-span-change-relayout.html: Removed.

2012-10-23  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed holiday gardening.

        * platform/qt/TestExpectations: Skip new tests (and sort) because ENABLE(SHADOW_DOM) is disabled.

2012-10-23  Kent Tamura  <tkent@chromium.org>

        Support full month names in DateTimeEditElement, and use them in input[type=month] by default
        https://bugs.webkit.org/show_bug.cgi?id=100060

        Reviewed by Kentaro Hara.

        Note: Other affected tests are already marked in TestExpectations.

        * fast/forms/month-multiple-fields/month-multiple-fields-appearance-l10n.html:
         Add max attributes to show appearance in typical usage.
        * platform/chromium-mac/fast/forms/month-multiple-fields/month-multiple-fields-appearance-l10n-expected.png:
        Updated.

2012-10-23  Mike West  <mkwst@chromium.org>

        Viewport errors should be slightly friendlier with regard to ';'.
        https://bugs.webkit.org/show_bug.cgi?id=100003

        Reviewed by Adam Barth.

        * fast/viewport/viewport-128-expected.txt:
        * fast/viewport/viewport-133-expected.txt:
        * fast/viewport/viewport-134-expected.txt:
        * fast/viewport/viewport-54-expected.txt:
        * fast/viewport/viewport-65-expected.txt:
        * fast/viewport/viewport-67-expected.txt:
        * fast/viewport/viewport-77-expected.txt:
        * fast/viewport/viewport-warnings-5-expected.txt:
            Updating tests with new expectations.

2012-10-23  Dan Carney  <dcarney@google.com>
