@@ -1,3 +1,15 @@
+2012-10-23  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Incorrect resolution of relative URLs containing a scheme in query parameters
+        https://bugs.webkit.org/show_bug.cgi?id=100084
+
+        Reviewed by Vsevolod Vlasov.
+
+        Use the RFC 3986 grammar for the URL scheme.
+
+        * inspector/front-end/ParsedURL.js:
+        (WebInspector.ParsedURL):
+
 2012-10-23  Eugene Klyuchnikov  <eustas.bug@gmail.com>
 
         Web Inspector: Elaborate source panel sidebar context menus.
